; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-hwdb/extr_sd-hwdb.c_trie_children_cmp_f.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-hwdb/extr_sd-hwdb.c_trie_children_cmp_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trie_child_entry_f = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @trie_children_cmp_f to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trie_children_cmp_f(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.trie_child_entry_f*, align 8
  %6 = alloca %struct.trie_child_entry_f*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.trie_child_entry_f*
  store %struct.trie_child_entry_f* %8, %struct.trie_child_entry_f** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.trie_child_entry_f*
  store %struct.trie_child_entry_f* %10, %struct.trie_child_entry_f** %6, align 8
  %11 = load %struct.trie_child_entry_f*, %struct.trie_child_entry_f** %5, align 8
  %12 = getelementptr inbounds %struct.trie_child_entry_f, %struct.trie_child_entry_f* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.trie_child_entry_f*, %struct.trie_child_entry_f** %6, align 8
  %15 = getelementptr inbounds %struct.trie_child_entry_f, %struct.trie_child_entry_f* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = sub nsw i32 %13, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
